# mazegen

./: .gitignore  README.md  mypy.ini  setup.cfg
src/: main.py
src/mazegen/: __init__.py  field.py  position.py
src/mazegen/configure/: __init__.py  aisle_dig.py  stick_knock.py
