#
#
#

[metadata]
name=mazegen
version=0.1.0
description=Automatic maze generation
license=MIT
license_files=file: LICENSE
author=Enchan1207
author_email=enchant0130@gmail.com
url=
include_package_data=True
zip_safe=False

[options]
package_dir=
    =src
packages=find:

install_requires =


[options.packages.find]
where=src
